{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 561,
  "lineage": "2cceddc0-e5cb-8a94-2330-959edecd6e6e",
  "resources": [
    {
      "module": "module.Tf_vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06783fe27b19018a0",
            "arn": "arn:aws:ec2:eu-north-1:387052708321:instance/i-0d26eb0cd838f50c6",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d26eb0cd838f50c6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07c8b78036b6a22dc",
            "private_dns": "ip-10-0-1-84.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0640b08ada47b96df",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06952dc97435400ec",
            "tags": {
              "Name": "Test-NAT-Instance"
            },
            "tags_all": {
              "Name": "Test-NAT-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e77f3cab36f2c1a9"
            ]
          },
          "dependencies": [
            "module.Tf_vpc.aws_subnet.subnets1",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.Tf_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:internet-gateway/igw-06009c4aac6608b2f",
            "id": "igw-06009c4aac6608b2f",
            "owner_id": "387052708321",
            "vpc_id": "vpc-0b4c55fe2cdd5caaa"
          },
          "dependencies": [
            "module.Tf_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.Tf_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:route-table/rtb-0f252712084d2c476",
            "id": "rtb-0f252712084d2c476",
            "owner_id": "387052708321",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b4c55fe2cdd5caaa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Tf_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.Tf_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:route-table/rtb-0ea5ca4274502ca4a",
            "id": "rtb-0ea5ca4274502ca4a",
            "owner_id": "387052708321",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06009c4aac6608b2f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b4c55fe2cdd5caaa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Tf_vpc.aws_internet_gateway.igw1",
            "module.Tf_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.Tf_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rpri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0700850bcadd9e384",
            "route_table_id": "rtb-0f252712084d2c476",
            "subnet_id": "subnet-020deacea89f065f9"
          },
          "dependencies": [
            "module.Tf_vpc.aws_route_table.private1",
            "module.Tf_vpc.aws_subnet.subnets2",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f764510950244e51",
            "route_table_id": "rtb-0f252712084d2c476",
            "subnet_id": "subnet-02fb9f48838dab8d5"
          },
          "dependencies": [
            "module.Tf_vpc.aws_route_table.private1",
            "module.Tf_vpc.aws_subnet.subnets2",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dee5bd0a3c8ab7de",
            "route_table_id": "rtb-0f252712084d2c476",
            "subnet_id": "subnet-0bdd58257455c460d"
          },
          "dependencies": [
            "module.Tf_vpc.aws_route_table.private1",
            "module.Tf_vpc.aws_subnet.subnets2",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.Tf_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rpub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0490be22e155ee4af",
            "route_table_id": "rtb-0ea5ca4274502ca4a",
            "subnet_id": "subnet-06952dc97435400ec"
          },
          "dependencies": [
            "module.Tf_vpc.aws_internet_gateway.igw1",
            "module.Tf_vpc.aws_route_table.public1",
            "module.Tf_vpc.aws_subnet.subnets1",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085a3942d38bfa5c9",
            "route_table_id": "rtb-0ea5ca4274502ca4a",
            "subnet_id": "subnet-07252ad4c9954505d"
          },
          "dependencies": [
            "module.Tf_vpc.aws_internet_gateway.igw1",
            "module.Tf_vpc.aws_route_table.public1",
            "module.Tf_vpc.aws_subnet.subnets1",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a4fefe5b8ed335f",
            "route_table_id": "rtb-0ea5ca4274502ca4a",
            "subnet_id": "subnet-0cc597d3585b87ba6"
          },
          "dependencies": [
            "module.Tf_vpc.aws_internet_gateway.igw1",
            "module.Tf_vpc.aws_route_table.public1",
            "module.Tf_vpc.aws_subnet.subnets1",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.Tf_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:subnet/subnet-06952dc97435400ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06952dc97435400ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "387052708321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b4c55fe2cdd5caaa"
          },
          "dependencies": [
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:subnet/subnet-07252ad4c9954505d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07252ad4c9954505d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "387052708321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b4c55fe2cdd5caaa"
          },
          "dependencies": [
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:subnet/subnet-0cc597d3585b87ba6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc597d3585b87ba6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "387052708321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b4c55fe2cdd5caaa"
          },
          "dependencies": [
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.Tf_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:subnet/subnet-020deacea89f065f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020deacea89f065f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "387052708321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b4c55fe2cdd5caaa"
          },
          "dependencies": [
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:subnet/subnet-02fb9f48838dab8d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fb9f48838dab8d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "387052708321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b4c55fe2cdd5caaa"
          },
          "dependencies": [
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:subnet/subnet-0bdd58257455c460d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bdd58257455c460d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "387052708321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b4c55fe2cdd5caaa"
          },
          "dependencies": [
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.Tf_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:vpc/vpc-0b4c55fe2cdd5caaa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0832dda893c3b4f4f",
            "default_route_table_id": "rtb-01742567110db61a9",
            "default_security_group_id": "sg-0e77f3cab36f2c1a9",
            "dhcp_options_id": "dopt-036290a5568529468",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b4c55fe2cdd5caaa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01742567110db61a9",
            "owner_id": "387052708321",
            "tags": {
              "Location": "HYD",
              "Name": "Tag Test"
            },
            "tags_all": {
              "Location": "HYD",
              "Name": "Tag Test"
            }
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "Applb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:387052708321:loadbalancer/app/ALB/5b959a2b5e34e9c2",
            "arn_suffix": "app/ALB/5b959a2b5e34e9c2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ALB-1805556956.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:387052708321:loadbalancer/app/ALB/5b959a2b5e34e9c2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fa0227807c66b64f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06952dc97435400ec"
              },
              {
                "subnet_id": "subnet-07252ad4c9954505d"
              },
              {
                "subnet_id": "subnet-0cc597d3585b87ba6"
              }
            ],
            "subnets": [
              "subnet-06952dc97435400ec",
              "subnet-07252ad4c9954505d",
              "subnet-0cc597d3585b87ba6"
            ],
            "vpc_id": "vpc-0b4c55fe2cdd5caaa",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "module.Tf_vpc.aws_subnet.subnets1",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs",
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:387052708321:listener/app/ALB/5b959a2b5e34e9c2/547d282ede69fb51",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:387052708321:targetgroup/ALBTarget/38ebff22b2fbf5de",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:387052708321:listener/app/ALB/5b959a2b5e34e9c2/547d282ede69fb51",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:387052708321:loadbalancer/app/ALB/5b959a2b5e34e9c2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Tf_vpc.aws_subnet.subnets1",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs",
            "module.alb.aws_lb.Applb",
            "module.alb.aws_lb_target_group.myalb",
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "myalb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:387052708321:targetgroup/ALBTarget/38ebff22b2fbf5de",
            "arn_suffix": "targetgroup/ALBTarget/38ebff22b2fbf5de",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:387052708321:targetgroup/ALBTarget/38ebff22b2fbf5de",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ALBTarget",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b4c55fe2cdd5caaa"
          },
          "dependencies": [
            "module.Tf_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:387052708321:targetgroup/ALBTarget/38ebff22b2fbf5de-20230913074100439100000005",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:387052708321:targetgroup/ALBTarget/38ebff22b2fbf5de",
            "target_id": "i-0873d379abbee588c"
          },
          "dependencies": [
            "module.Tf_vpc.aws_subnet.subnets1",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs",
            "module.alb.aws_lb_target_group.myalb",
            "module.ec2_instance.aws_iam_instance_profile.ec2_profile",
            "module.ec2_instance.aws_iam_role.ec2_role",
            "module.ec2_instance.aws_instance.instance",
            "module.ec2_instance.aws_security_group.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:387052708321:targetgroup/ALBTarget/38ebff22b2fbf5de-20230913074100166000000004",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:387052708321:targetgroup/ALBTarget/38ebff22b2fbf5de",
            "target_id": "i-078af349cadbdf14b"
          },
          "dependencies": [
            "module.Tf_vpc.aws_subnet.subnets1",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs",
            "module.alb.aws_lb_target_group.myalb",
            "module.ec2_instance.aws_iam_instance_profile.ec2_profile",
            "module.ec2_instance.aws_iam_role.ec2_role",
            "module.ec2_instance.aws_instance.instance",
            "module.ec2_instance.aws_security_group.web"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:security-group/sg-0fa0227807c66b64f",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa0227807c66b64f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "some description",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow traffic for alb",
            "name_prefix": "",
            "owner_id": "387052708321",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_security_rules"
            },
            "tags_all": {
              "Name": "web_security_rules"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4c55fe2cdd5caaa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Tf_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c147c2e2b026f094",
            "arn": "arn:aws:ec2:eu-north-1:387052708321:instance/i-0873d379abbee588c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3-role",
            "id": "i-0873d379abbee588c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sharath",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bbd530864800e1eb",
            "private_dns": "ip-10-0-1-130.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.130",
            "public_ip": "16.171.63.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a7c1a7ffc98d93a4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06952dc97435400ec",
            "tags": {
              "Name": "EC2-1"
            },
            "tags_all": {
              "Name": "EC2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0f96ed60c600c14bb"
            ]
          },
          "dependencies": [
            "module.Tf_vpc.aws_subnet.subnets1",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs",
            "module.ec2_instance.aws_iam_instance_profile.ec2_profile",
            "module.ec2_instance.aws_iam_role.ec2_role",
            "module.ec2_instance.aws_security_group.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c147c2e2b026f094",
            "arn": "arn:aws:ec2:eu-north-1:387052708321:instance/i-078af349cadbdf14b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3-role",
            "id": "i-078af349cadbdf14b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sharath",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06dd44a67f05296d7",
            "private_dns": "ip-10-0-2-188.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.188",
            "public_ip": "16.170.239.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0478c14355aea4cb0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07252ad4c9954505d",
            "tags": {
              "Name": "EC2-2"
            },
            "tags_all": {
              "Name": "EC2-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0f96ed60c600c14bb"
            ]
          },
          "dependencies": [
            "module.Tf_vpc.aws_subnet.subnets1",
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.Tf_vpc.data.aws_availability_zones.azs",
            "module.ec2_instance.aws_iam_instance_profile.ec2_profile",
            "module.ec2_instance.aws_iam_role.ec2_role",
            "module.ec2_instance.aws_security_group.web"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:security-group/sg-0f96ed60c600c14bb",
            "description": "Allow Inbond Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f96ed60c600c14bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Some Decription",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Some Decription",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Allow Traffic for Web",
            "name_prefix": "",
            "owner_id": "387052708321",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_security_rules"
            },
            "tags_all": {
              "Name": "ec2_security_rules"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4c55fe2cdd5caaa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Tf_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.jhc_rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:387052708321:security-group/sg-057264320ab448b64",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057264320ab448b64",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "some description",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f96ed60c600c14bb"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "allow traffic for RDS",
            "name_prefix": "",
            "owner_id": "387052708321",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds_security_rules"
            },
            "tags_all": {
              "Name": "rds_security_rules"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4c55fe2cdd5caaa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Tf_vpc.aws_vpc.vpc1",
            "module.ec2_instance.aws_security_group.web"
          ]
        }
      ]
    }
  ]
}